# v-pilot

./: .gitignore  README.md  pyproject.toml
vpilot/: main.py
vpilot/commands/: plan.py  spec.py  uvm.py
vpilot/core/: code_manager.py  llm_handler.py
vpilot/skeletons/: Makefile  agent.py  base_bfm.py  base_test.py  cocotb_coverage.py  coverage.py  driver.py  env.py  monitor.py  scoreboard.py  seq_item.py  sequence_lib.py  tb_top.py  test_lib.py
vpilot/templates/plan/: verif_plan.tpl.yml
vpilot/templates/spec/: design_spec.tpl.yml
