[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vpilot"
version = "0.1.0"
authors = [
  { name="wz", email="wz@example.com" },
]
description = "A collaborative RTL simulation verification framework."
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
